<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60sp"
        android:background="#CAEFCC"
        android:text="@string/ordername"
        android:textSize="50sp"
        android:textStyle="bold|italic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:inputType="text"
        android:id="@+id/etName"
        android:hint="@string/ordername"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:inputType="text"
        android:id="@+id/etCity"
        android:hint="@string/city"
        android:textAlignment="center" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="160dp"
        android:id="@+id/btnclick"
        android:text="@string/add"/>

</RelativeLayout>