<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:background="#B6E1B8"
        android:text="@string/selectitem"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/baseline_add_circle_24" />

    <TextView
        android:id="@+id/etQnt"
        android:layout_width="100dp"
        android:hint="@string/qnt"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="140dp"
        android:textAlignment="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/baseline_arrow_left_24" />

    <Spinner
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="250dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="350dp"
        android:text="@string/order"
        android:textStyle="bold|italic" />


</RelativeLayout>